# src/route/job.js
@@ -4,6 +4,14 @@ const router = express.Router();
 
 router.get('/alo', jobController.index);
 
-router.post('/createJob', jobController.createJob);
+router.post('/createFromJob', jobController.createFromJob);
+
+router.get('/AllFormJob', jobController.getAllFormJob);
+
+router.get('/:id/editFormJob', jobController.editFormJob);
+
+router.put('/:id/updateFormJob', jobController.updateformJob);
+
+router.delete('/:id/deleteFormJob', jobController.deleteFormJob);
 
 module.exports = router;
